Fix layout test leak fast/events/drag-remove-iframe-crash.html

Layout test fast/events/drag-remove-iframe-crash.html was failed on leak
bot because an existing issue with drag and drop data transfer.
This CL fixes the leak by reset data transfer on MEM:Clear

Bug: 847868
Change-Id: I5bf931c7086f971af43aa0a4bd40a34fe4f2ac71
Reviewed-on: https://chromium-review.googlesource.com/1082603
Commit-Queue: Ella Ge <eirage@chromium.org>
Reviewed-by: Navid Zolghadr <nzolghadr@chromium.org>
Reviewed-by: David Bokan <bokan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#564200}
Former-commit-id: b4cbe3d9008a0a74f70f24b96314759de0afa329